# happy-hacking-gnu

./: CMakeLists.txt  README.md
src/: functions.h  hidcomm.h  main.c
